# Libstructural

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  DESCRIPTION.rst  LICENSE  MANIFEST.in  MainLibStruct.sln  README.md  fluxbalance.cpp  setup.py
INSTALL_x64/lib/: LibStructural-static.lib  LibStructural.lib
LibLA/: CMakeLists.txt  libla.cpp  util - Copy.__cpp  util.cpp
LibStructural/: CMakeLists.txt  GlobalData.cpp  computeEFM.cpp  gEFMUtils.cpp  gEFM_API.cpp  libMetaTool4_3.cpp  libMetaToolInt4_3.cpp  libStruct.vcxproj  libStruct.vcxproj.filters  libstructural.cpp  meta4.3_double - Stable.cpp  meta4.3_double.cpp  sbmlmodel.cpp  structural.exp  structural.lib
LibStructural/include/: libstructural.h
LibStructural/x64/Debug/: vc141.idb
LibStructural/x64/Debug/structural.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  structural.lastbuildstate
LibStructural/x64/Release/structural.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  structural.lastbuildstate  structural.write.1u.tlog
Mac_64_2/structural/: libstructuralPYTHON_wrap.cxx  structural.py
Mac_64_2/structural.egg-info/: PKG-INFO  SOURCES.txt
SWIG/: CMakeLists.txt  SBMLtoMetaTool.py  elementaryMode.py  fna15064  libstructural.i  libstructural.i.bak  libstructuralPYTHON_wrap.cxx  libstructural_wrap_python.cpp  metaToolDouble  st_docstrings.i  st_docstrings.i.bak
SWIG/python/: _structural.ipdb  structural.py
SWIG/test/: testElementaryModesUsingAntimony.py  testElementaryModesUsingSBML.py  testLibStructuralSBML.py  testModel17.xml  testModel22.xml  testModel23.xml  testModel25.xml  testModel26.xml  testModel27.xml  testModel28.xml  testModel29.xml  testModel30.xml  testModel31.xml  testModel4.xml  testModel7.xml  testModel9.xml
SWIG/test/tests/: Test_structural.py  elementaryModes.py  elementaryModes_tellurium.py  testLibStructural.py  testModel1.xml  testModel11.xml  testModel12.xml  testModel19.xml  testModel6.xml
SWIG/test_models/: BMID000000101155.xml
TestLibStruct/: program.cpp  structMain.vcxproj  structMain.vcxproj.bak  structMain.vcxproj.filters
TestLibStruct/src/: Main.cpp
Win_64_2/structural/: libstructuralPYTHON_wrap.cxx  structural.py
Win_64_2/structural.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
build_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CLAPACK.sln  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LibStructural.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clapack-config.cmake  clapack-targets.cmake  cmake_install.cmake  install_manifest.txt
build_x64/LibLA/: LibLA.vcxproj  (+8 more)
docs/: API.rst  Makefile  additional_info.rst  building_from_source.rst  conf.py  example_models.rst  index.rst  installation.rst  installation.rst.bak  libstruct_examples.rst  libstruct_examples.rst.bak  make.bat  structural.py
docs_old/: API.rst  conf.py  index.rst
html/: ____init_____8py.html  _a_s_t_base_8h.html  _a_s_t_base_plugin_8h.html  _a_s_t_binary_function_node_8h.html  _a_s_t_c_symbol_8h.html  _a_s_t_c_symbol_avogadro_node_8h.html  _a_s_t_c_symbol_delay_node_8h.html  _a_s_t_c_symbol_rate_of_node_8h.html  _a_s_t_c_symbol_time_node_8h.html  _a_s_t_ci_function_node_8h.html  _a_s_t_ci_number_node_8h.html  _a_s_t_cn_base_8h.html  _a_s_t_cn_exponential_node_8h.html  _a_s_t_cn_integer_node_8h.html  _a_s_t_cn_rational_node_8h.html  _a_s_t_cn_real_node_8h.html  _a_s_t_constant_number_node_8h.html  _a_s_t_function_8h.html  _a_s_t_function_base_8h.html  _a_s_t_lambda_function_node_8h.html  _a_s_t_nary_function_node_8h.html  _a_s_t_node_8h.html  _a_s_t_number_8h.html  _a_s_t_piecewise_function_node_8h.html  _a_s_t_qualifier_node_8h.html  _a_s_t_semantics_node_8h.html  _a_s_t_types_8h.html  _a_s_t_unary_function_node_8h.html  _algebraic_rule_8h.html  _assignment_rule_8h.html  _b_l_a_s_2_s_r_c_2lsame_8c.html  _b_l_a_s_2_s_r_c_2xerbla_8c.html  _b_l_a_s_2_s_r_c_2xerbla__array_8c.html  _c_v_term_8h.html  _compartment_8h.html  _compartment_type_8h.html  _compress_common_8h.html  _consistency_validator_8h.html  _constraint_macros_8h.html  _conversion_option_8h.html  (+2874 more)
include/: BitPatternTree.h  BitPatternTreeNode.h  BitVector.h  EFMGenerator.h  GlobalData.h  Network.h  Pathway.h  PathwayPool.h  Rank.h  ReactionCoefficients.h  ReversibleTree.h  ReversibleTreeNode.h  Stopwatch.h  computeEFM.h  gEFMUtils.h  gEFM_API.h  libMetaTool4_3.h  libMetaToolInt4_3.h  libstructural.h  matrix - Copy.h  util.h
install_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LibLA-static.vcxproj  LibLA-static.vcxproj.filters  LibLA.vcxproj  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clapack-config.cmake  clapack-targets.cmake  cmake_install.cmake
latex/: ____init_____8py.tex  _a_s_t_base_8h.tex  _a_s_t_base_plugin_8h.tex  _a_s_t_binary_function_node_8h.tex  _a_s_t_c_symbol_8h.tex  _a_s_t_c_symbol_avogadro_node_8h.tex  _a_s_t_c_symbol_delay_node_8h.tex  _a_s_t_c_symbol_rate_of_node_8h.tex  _a_s_t_c_symbol_time_node_8h.tex  _a_s_t_ci_function_node_8h.tex  _a_s_t_ci_number_node_8h.tex  _a_s_t_cn_base_8h.tex  _a_s_t_cn_exponential_node_8h.tex  _a_s_t_cn_integer_node_8h.tex  _a_s_t_cn_rational_node_8h.tex  _a_s_t_cn_real_node_8h.tex  _a_s_t_constant_number_node_8h.tex  _a_s_t_function_8h.tex  _a_s_t_function_base_8h.tex  _a_s_t_lambda_function_node_8h.tex  _a_s_t_nary_function_node_8h.tex  _a_s_t_node_8h.tex  _a_s_t_number_8h.tex  _a_s_t_piecewise_function_node_8h.tex  _a_s_t_qualifier_node_8h.tex  _a_s_t_semantics_node_8h.tex  _a_s_t_types_8h.tex  _a_s_t_unary_function_node_8h.tex  _algebraic_rule_8h.tex  _assignment_rule_8h.tex  _b_l_a_s_2_s_r_c_2lsame_8c.tex  _b_l_a_s_2_s_r_c_2xerbla_8c.tex  _b_l_a_s_2_s_r_c_2xerbla__array_8c.tex  _c_v_term_8h.tex  _compartment_8h.tex  _compartment_type_8h.tex  _compress_common_8h.tex  _consistency_validator_8h.tex  _constraint_macros_8h.tex  _conversion_option_8h.tex  (+2650 more)
(+2912 files in other folders)
